✨ Add token contract using SparseMerkleTrie

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
   "crates/contracts/amm",
   "crates/contracts/hydentity",
   "crates/contracts/hyllar",
+  "crates/contracts/smt-token",
   "crates/contracts/staking",
   "crates/contracts/risc0-recursion",
   "crates/contracts/uuid-tld",
@@ -45,6 +46,7 @@ hyle-verifiers = { version = "0.13.0-rc.3", default-features = false, path = "cr
 risc0-recursion = { version = "0.13.0-rc.3", default-features = false, path = "crates/contracts/risc0-recursion", package = "hyle-risc0-recursion" }
 hydentity = { version = "0.13.0-rc.3", default-features = false, path = "crates/contracts/hydentity", package = "hyle-hydentity" }
 hyllar = { version = "0.13.0-rc.3", default-features = false, path = "crates/contracts/hyllar", package = "hyle-hyllar" }
+smt-token = { version = "0.13.0-rc.3", default-features = false, path = "crates/contracts/smt-token", package = "hyle-smt-token" }
 staking = { version = "0.13.0-rc.3", default-features = false, path = "crates/contracts/staking", package = "hyle-staking" }
 amm = { version = "0.13.0-rc.3", default-features = false, path = "crates/contracts/amm", package = "hyle-amm" }
 uuid-tld = { version = "0.13.0-rc.3", default-features = false, path = "crates/contracts/uuid-tld", package = "hyle-uuid-tld" }
@@ -87,6 +89,7 @@ hyle-model = { workspace = true, default-features = false, features = [
 ] }
 hydentity = { workspace = true, features = ["client"] }
 hyllar = { workspace = true, features = ["client"] }
+smt-token = { workspace = true, features = ["client"] }
 risc0-recursion = { workspace = true }
 hyle-verifiers = { workspace = true }
 hyle-contracts = { workspace = true }
@@ -163,6 +166,7 @@ sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8
 [dev-dependencies]
 amm = { workspace = true, features = ["client"] }
 uuid-tld = { workspace = true, features = ["client"] }
+smt-token = { workspace = true, features = ["client"] }
 client-sdk = { workspace = true, default-features = false, features = [
   "rest",
   "risc0",
