--- a/crates/contracts/Cargo.toml
+++ b/crates/contracts/Cargo.toml
@@ -16,6 +16,7 @@ sdk = { workspace = true }
 amm = { workspace = true, features = ["client"] }
 hydentity = { workspace = true, features = ["client"] }
 hyllar = { workspace = true, features = ["client"] }
+smt-token = { workspace = true, features = ["client"] }
 risc0-recursion = { workspace = true, features = ["client"] }
 staking = { workspace = true, features = ["client"] }
 uuid-tld = { workspace = true, features = ["client"] }
@@ -28,6 +29,7 @@ risc0-build = { version = "2.0.1", optional = true }
 methods = [
   "amm",
   "hyllar",
+  "smt-token",
   "hydentity",
   "staking",
   "risc0-recursion",
@@ -39,9 +41,18 @@ build = ["dep:risc0-build"]
 nonreproducible = ["build", "all"]
 
 # Following features are used to choose which contracts should be rebuild with docker
-all = ["amm", "hyllar", "hydentity", "staking", "risc0-recursion", "uuid-tld"]
+all = [
+  "amm",
+  "hyllar",
+  "smt-token",
+  "hydentity",
+  "staking",
+  "risc0-recursion",
+  "uuid-tld",
+]
 amm = []
 hyllar = []
+smt-token = []
 hydentity = []
 staking = []
 risc0-recursion = []
