--- a/crates/contracts/smt-token/Cargo.toml
+++ b/crates/contracts/smt-token/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hyle-hyllar"
+name = "hyle-smt-token"
 description = "Hyle Smart Contract"
 license = "MIT"
 version = { workspace = true }
@@ -9,51 +9,51 @@ repository = { workspace = true }
 rust-version = "1.81"
 
 [[bin]]
-name = "hyllar"
+name = "smt-token"
 path = "src/main.rs"
 required-features = ["risc0"]
 test = false
 
 [[example]]
-name = "hyllar-runner"
+name = "smt-token-runner"
 path = "examples/host.rs"
 
-
 [dependencies]
-sdk = { workspace = true }
-serde = { version = "1.0", default-features = false, features = [
-  "derive",
-  "alloc",
-] }
 anyhow = "1.0.96"
+sdk = { workspace = true }
 sha2 = "=0.10.8" # precompile patched at workspace root
-borsh = { version = "1.5.6", features = ["derive"] }
-serde_with = "3.12.0"
+borsh = { version = "1.5.5", features = ["derive"] }
+sparse-merkle-tree = "0.6.1"
+serde = { version = "1.0", default-features = false, features = [
+    "derive",
+    "alloc",
+] }
 
 risc0-zkvm = { version = "2.0.0", default-features = false, optional = true, features = [
-  'std',
+    'std',
 ] }
 client-sdk = { workspace = true, features = [
-  "risc0",
-  "rest",
-  "indexer",
+    "risc0",
+    "rest",
+    "indexer",
 ], optional = true }
 
 [dev-dependencies]
 # Active client feature for tests
-hyle-hyllar = { path = ".", features = ["client"] }
-
+hyle-smt-token = { path = ".", features = ["client"] }
 tokio = { version = "1.42.0", features = ["full", "tracing"] }
+
 risc0-zkvm = { version = "2.0.0", default-features = false, features = [
-  'std',
-  'prove',
+    'std',
+    'prove',
 ] }
 mockall = "0.13.0"
+test-log = { version = "0.2.17", features = [
+    "color",
+    "trace",
+], default-features = false }
 
 [features]
 default = []
 client = ["dep:client-sdk"]
 risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
-
-[package.metadata.docs.rs]
-features = ["client"]
