--- a/crates/contracts/Cargo.toml
+++ b/crates/contracts/Cargo.toml
@@ -22,6 +22,7 @@ risc0-build = { version = "1.2.4", optional = true }
 methods = [
     "amm",
     "hyllar",
+    "smt-token",
     "hydentity",
     "staking",
     "risc0-recursion",
