--- a/crates/contracts/smt-token/Cargo.toml
+++ b/crates/contracts/smt-token/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hyle-hyllar"
+name = "hyle-smt-token"
 description = "Hyle Smart Contract"
 version = { workspace = true }
 edition = { workspace = true }
@@ -9,26 +9,25 @@ repository = { workspace = true }
 rust-version = "1.81"
 
 [[bin]]
-name = "hyllar"
+name = "smt-token"
 path = "src/main.rs"
 required-features = ["risc0"]
 test = false
 
 [[example]]
-name = "hyllar-runner"
+name = "smt-token-runner"
 path = "examples/host.rs"
 
-
 [dependencies]
+anyhow = "1.0.96"
 sdk = { workspace = true }
+sha2 = "=0.10.8" # precompile patched at workspace root
+borsh = { version = "1.5.5", features = ["derive"] }
+sparse-merkle-tree = "0.6.1"
 serde = { version = "1.0", default-features = false, features = [
     "derive",
     "alloc",
 ] }
-anyhow = "1.0.96"
-sha2 = "=0.10.8" # precompile patched at workspace root
-borsh = { version = "1.5.5", features = ["derive"] }
-serde_with = "3.12.0"
 
 risc0-zkvm = { version = "1.2.4", default-features = false, optional = true, features = [
     'std',
@@ -41,14 +40,18 @@ client-sdk = { workspace = true, features = [
 
 [dev-dependencies]
 # Active client feature for tests
-hyle-hyllar = { path = ".", features = ["client"] }
-
+hyle-smt-token = { path = ".", features = ["client"] }
 tokio = { version = "1.42.0", features = ["full", "tracing"] }
+
 risc0-zkvm = { version = "1.2.4", default-features = false, features = [
     'std',
     'prove',
 ] }
 mockall = "0.13.0"
+test-log = { version = "0.2.17", features = [
+    "color",
+    "trace",
+], default-features = false }
 
 [features]
 default = []
