--- a/crates/contracts/uuid-tld/Cargo.toml
+++ b/crates/contracts/uuid-tld/Cargo.toml
@@ -17,11 +17,17 @@ test = false
 [dependencies]
 sdk = { workspace = true }
 borsh = "1.5.5"
+serde = { version = "1.0", default-features = false, features = [
+    "derive",
+    "alloc",
+] }
 
 risc0-zkvm = { version = "1.2.4", default-features = false, optional = true, features = [
     'std',
 ] }
-client-sdk = { workspace = true, default-features = false, features = ["risc0"], optional = true }
+client-sdk = { workspace = true, default-features = false, features = [
+    "risc0",
+], optional = true }
 uuid = { version = "1.16.0", default-features = false }
 rand = { version = "0.9", default-features = false }
 rand_seeder = { version = "0.4.0", default-features = false }
