put back run_rest run_tcp

--- a/src/utils/conf_defaults.toml
+++ b/src/utils/conf_defaults.toml
@@ -11,10 +11,12 @@ data_directory = "data_node"
 da_server_port = 4141
 
 # Rest API
+run_rest_server = true
 rest_server_port = 4321
 rest_server_max_body_size = 10_485_760 # 10 MB
 
 # TCP API
+run_tcp_server = true
 tcp_server_port = 1414
 
 # Indexer
