--- a/src/utils/conf_defaults.toml
+++ b/src/utils/conf_defaults.toml
@@ -41,6 +41,10 @@ slot_duration = 1000
 # Whether to run the single-node or full consensus
 solo = true
 
+[node_state]
+# Timeout window for blob transactions
+timeout_window = 100
+
 [genesis]
 # Stakers and their inigial stake.
 # Default conf has to be empty as config is additive
