--- a/crates/hyle-net/Cargo.toml
+++ b/crates/hyle-net/Cargo.toml
@@ -9,6 +9,10 @@ repository = { workspace = true }
 rust-version = { workspace = true }
 
 [dependencies]
+sdk = { workspace = true, default-features = false, features = [
+    "full-model",
+] }
+
 anyhow = "1.0.96"
 borsh = "1.5.5"
 tracing = "0.1"
