📄 Add licences on published crates

--- a/crates/bonsai-runner/Cargo.toml
+++ b/crates/bonsai-runner/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "hyle-bonsai-runner"
 description = "Hyle async lib to use risc0 bonsai"
+license = "MIT"
 version = { workspace = true }
 edition = { workspace = true }
-# license = { workspace = true }
 homepage = { workspace = true }
 repository = { workspace = true }
 rust-version = { workspace = true }
