--- a/crates/client-sdk/Cargo.toml
+++ b/crates/client-sdk/Cargo.toml
@@ -1,24 +1,23 @@
 [package]
 name = "hyle-client-sdk"
 description = "Hyle client SDK"
+license = "MIT"
 version = { workspace = true }
 edition = { workspace = true }
-# license = { workspace = true }
 homepage = { workspace = true }
 repository = { workspace = true }
 rust-version = { workspace = true }
 
 [dependencies]
-sdk = { workspace = true, default-features = false, features = [
-    "full-model",
-] }
+sdk = { workspace = true, default-features = false, features = ["full-model"] }
+bonsai-runner = { workspace = true, optional = true }
+
 anyhow = "1.0.96"
 borsh = "1.5.6"
 serde = "1.0"
 serde_json = { version = "1" }
 tracing = "0.1"
 
-bonsai-runner = { workspace = true, optional = true }
 risc0-zkvm = { version = "1.2.4", default-features = false, optional = true }
 sp1-sdk = { version = "4.1.3", default-features = false, optional = true }
 bincode = { version = "1.3.3", optional = true }
@@ -40,7 +39,14 @@ paste = { version = "1.0.15", optional = true }
 
 [features]
 rest = ["dep:reqwest"]
-tcp = ["dep:reqwest", "dep:tokio", "dep:tokio-util", "dep:futures", "dep:bytes", "dep:paste"]
+tcp = [
+  "dep:reqwest",
+  "dep:tokio",
+  "dep:tokio-util",
+  "dep:futures",
+  "dep:bytes",
+  "dep:paste",
+]
 indexer = ["dep:utoipa", "dep:axum", "dep:utoipa-axum", "dep:tokio"]
 risc0 = ["dep:risc0-zkvm", "dep:bonsai-runner"]
 sp1 = ["dep:sp1-sdk", "dep:bincode"]
