--- a/crates/contract-sdk/Cargo.toml
+++ b/crates/contract-sdk/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "hyle-contract-sdk"
 description = "Hyle smart contract SDK"
+license = "MIT"
 version = { workspace = true }
 edition = { workspace = true }
-# license = { workspace = true }
 homepage = { workspace = true }
 repository = { workspace = true }
 rust-version = "1.81"
@@ -11,8 +11,8 @@ rust-version = "1.81"
 [dependencies]
 hyle-model = { workspace = true, default-features = false }
 serde = { version = "1.0", default-features = false, features = [
-    "derive",
-    "alloc",
+  "derive",
+  "alloc",
 ] }
 borsh = "1.5.6"
 tracing = { version = "0.1", optional = true }
