--- a/crates/contracts/amm/Cargo.toml
+++ b/crates/contracts/amm/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "hyle-amm"
 description = "Hyle Smart Contract"
+license = "MIT"
 version = { workspace = true }
 edition = { workspace = true }
-# license = { workspace = true }
 homepage = { workspace = true }
 repository = { workspace = true }
 rust-version = "1.81"
@@ -18,14 +18,14 @@ test = false
 sdk = { workspace = true }
 hyllar = { workspace = true }
 serde = { version = "1.0", default-features = false, features = [
-    "derive",
-    "alloc",
+  "derive",
+  "alloc",
 ] }
 anyhow = "1.0.96"
 borsh = { version = "1.5.6", features = ["derive"] }
 
 risc0-zkvm = { version = "1.2.4", default-features = false, optional = true, features = [
-    'std',
+  'std',
 ] }
 client-sdk = { workspace = true, features = ["risc0"], optional = true }
 
