--- a/crates/contracts/hyllar/Cargo.toml
+++ b/crates/contracts/hyllar/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "hyle-hyllar"
 description = "Hyle Smart Contract"
+license = "MIT"
 version = { workspace = true }
 edition = { workspace = true }
-# license = { workspace = true }
 homepage = { workspace = true }
 repository = { workspace = true }
 rust-version = "1.81"
@@ -17,8 +17,8 @@ test = false
 [dependencies]
 sdk = { workspace = true }
 serde = { version = "1.0", default-features = false, features = [
-    "derive",
-    "alloc",
+  "derive",
+  "alloc",
 ] }
 anyhow = "1.0.96"
 sha2 = "=0.10.8" # precompile patched at workspace root
@@ -26,17 +26,20 @@ borsh = { version = "1.5.6", features = ["derive"] }
 serde_with = "3.12.0"
 
 risc0-zkvm = { version = "1.2.4", default-features = false, optional = true, features = [
-    'std',
+  'std',
 ] }
-client-sdk = { workspace = true, features = ["risc0", "indexer"], optional = true }
+client-sdk = { workspace = true, features = [
+  "risc0",
+  "indexer",
+], optional = true }
 
 [dev-dependencies]
 # Active client feature for tests
 hyle-hyllar = { path = ".", features = ["client"] }
 
 risc0-zkvm = { version = "1.2.4", default-features = false, features = [
-    'std',
-    'prove',
+  'std',
+  'prove',
 ] }
 mockall = "0.13.0"
 
