--- a/crates/client-sdk/Cargo.toml
+++ b/crates/client-sdk/Cargo.toml
@@ -8,6 +8,7 @@ homepage = { workspace = true }
 repository = { workspace = true }
 rust-version = { workspace = true }
 
+[dependencies]
 sdk = { workspace = true, default-features = false, features = [
     "full-model",
 ] }
