--- a/crates/hyle-net/Cargo.toml
+++ b/crates/hyle-net/Cargo.toml
@@ -25,7 +25,15 @@ futures = { version = "0.3.31" }
 turmoil = { version = "0.6.6", optional = true }
 
 bytes = { version = "1.10.0" }
+axum = { version = "0.8.1", features = ["ws", "macros"] }
 paste = { version = "1.0.15"}
+hyper = "1.6.0"
+pin-project-lite = "0.2.16"
+tower = "0.5.2"
+hyper-util = "0.1.10"
+serde_json = "1.0.140"
+http-body-util = "0.1.3"
+serde = "1.0.219"
 
 [features]
 default = ["turmoil"]
