--- a/crates/contracts/amm/Cargo.toml
+++ b/crates/contracts/amm/Cargo.toml
@@ -33,3 +33,6 @@ client-sdk = { workspace = true, features = ["risc0"], optional = true }
 default = []
 client = ["dep:client-sdk"]
 risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
+
+[package.metadata.docs.rs]
+features = ["client"]
