--- a/Cargo.toml
+++ b/Cargo.toml
@@ -150,6 +150,9 @@ keyring = { version = "3", features = [
 ] }
 whoami = "1.5.2"
 toml = "0.8.20"
+hyper-util = "0.1.10"
+tower = "0.5.2"
+hyper = "1.6.0"
 
 [patch.crates-io]
 sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
