--- a/crates/contracts/Cargo.toml
+++ b/crates/contracts/Cargo.toml
@@ -22,6 +22,9 @@ risc0-build = { version = "1.2.4", optional = true }
 methods = [
     "amm",
     "hyllar",
+    "ponzhyle",
+    "passport",
+    "twitter",
     "hydentity",
     "staking",
     "risc0-recursion",
