--- a/crates/contracts/uuid-tld/Cargo.toml
+++ b/crates/contracts/uuid-tld/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "hyle-uuid-tld"
 description = "Hyle Smart Contract"
+license-file = { workspace = true }
 version = { workspace = true }
 edition = { workspace = true }
-# license = { workspace = true }
 homepage = { workspace = true }
 repository = { workspace = true }
 rust-version = "1.81"
@@ -19,17 +19,19 @@ sdk = { workspace = true }
 borsh = "1.5.6"
 
 risc0-zkvm = { version = "1.2.4", default-features = false, optional = true, features = [
-    'std',
+  'std',
 ] }
-client-sdk = { workspace = true, default-features = false, features = ["risc0"], optional = true }
+client-sdk = { workspace = true, default-features = false, features = [
+  "risc0",
+], optional = true }
 uuid = { version = "1.16.0", default-features = false }
 rand = { version = "0.9", default-features = false }
 rand_seeder = { version = "0.4.0", default-features = false }
 
 [dev-dependencies]
 risc0-zkvm = { version = "1.2.4", default-features = false, features = [
-    'std',
-    'prove',
+  'std',
+  'prove',
 ] }
 
 [features]
