--- a/crates/hyle-loadtest/Cargo.toml
+++ b/crates/hyle-loadtest/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "hyle-loadtest"
 description = "Hyle loadtest tooling"
+license-file.workspace = true
 version.workspace = true
 edition.workspace = true
 homepage.workspace = true
@@ -14,7 +15,7 @@ hyllar = { workspace = true, features = ["client"] }
 hydentity = { workspace = true, features = ["client"] }
 hyle-contracts = { workspace = true }
 hyle-contract-sdk = { workspace = true, features = ["tracing"] }
-client-sdk = { workspace = true, features= ["rest", "risc0"] }
+client-sdk = { workspace = true, features = ["rest", "risc0"] }
 anyhow = "1.0.96"
 borsh = "1.5.6"
 clap = { version = "4.5.31", features = ["derive"] }
