--- a/crates/hyle-net/Cargo.toml
+++ b/crates/hyle-net/Cargo.toml
@@ -1,17 +1,15 @@
 [package]
 name = "hyle-net"
 description = "Hyle network SDK"
+license = "MIT"
 version = { workspace = true }
 edition = { workspace = true }
-# license = { workspace = true }
 homepage = { workspace = true }
 repository = { workspace = true }
 rust-version = { workspace = true }
 
 [dependencies]
-sdk = { workspace = true, default-features = false, features = [
-    "full-model",
-] }
+sdk = { workspace = true, default-features = false, features = ["full-model"] }
 
 anyhow = "1.0.96"
 borsh = "1.5.5"
@@ -19,11 +17,11 @@ tracing = "0.1"
 
 # Tcp feature
 tokio = { version = "1.42.0", features = ["full", "tracing"], optional = true }
-tokio-util = { version = "0.7.14"}
+tokio-util = { version = "0.7.14" }
 futures = { version = "0.3.31" }
 
 bytes = { version = "1.10.0" }
-paste = { version = "1.0.15"}
+paste = { version = "1.0.15" }
 
 [features]
 default = ["tokio"]
