--- a/crates/hyle-verifiers/Cargo.toml
+++ b/crates/hyle-verifiers/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "hyle-verifiers"
 description = "Hyle verifiers"
+license-file = { workspace = true }
 version = { workspace = true }
 edition = { workspace = true }
-# license = { workspace = true }
 homepage = { workspace = true }
 repository = { workspace = true }
 rust-version = { workspace = true }
@@ -19,12 +19,12 @@ risc0-zkvm = { version = "1.2.4", default-features = false, features = ["std"] }
 tracing = "0.1"
 
 sp1-sdk = { version = "4.1.3", default-features = false, optional = true }
-bincode = {version = "1.3.3", optional = true}
+bincode = { version = "1.3.3", optional = true }
 
 [dev-dependencies]
 test-log = { version = "0.2.17", features = [
-    "color",
-    "trace",
+  "color",
+  "trace",
 ], default-features = false }
 
 [features]
