--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,6 +100,7 @@ reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1" }
 sha3 = "0.10.8"
+secp256k1 = { version = "0.30.0" }
 strum_macros = "0.27.1"
 tracing = "0.1"
 
