--- a/Cargo.toml
+++ b/Cargo.toml
@@ -151,6 +151,8 @@ keyring = { version = "3", features = [
 whoami = "1.5.2"
 toml = "0.8.20"
 
+zip = "=2.3.0"
+
 [patch.crates-io]
 sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
 
@@ -175,7 +177,7 @@ tokio-stream = "0.1.17"
 tempfile = "3.19.1"
 assert-json-diff = "2.0.2"
 risc0-recursion = { workspace = true }
-risc0-zkvm = { version = "1.2.4", default-features = false, features = [
+risc0-zkvm = { version = "2.0.0", default-features = false, features = [
   "client",
 ] }
 signal-child = "1.0.6"
