:bug:  Fix compilation client-sdk (#946)
Co-authored-by: Bertrand D. <bertrand@hyle.eu>

--- a/crates/client-sdk/Cargo.toml
+++ b/crates/client-sdk/Cargo.toml
@@ -11,7 +11,7 @@ rust-version = { workspace = true }
 [dependencies]
 sdk = { workspace = true, default-features = false, features = ["full-model"] }
 bonsai-runner = { workspace = true, optional = true }
-hyle-net = { workspace = true }
+hyle-net = { workspace = true, features = ["tokio"] }
 
 anyhow = "1.0.96"
 borsh = "1.5.6"
