--- a/.github/docker/Dockerfile.alpine
+++ b/.github/docker/Dockerfile.alpine
@@ -1,6 +1,6 @@
 FROM rust:alpine AS builder
 RUN apk add gcc musl-dev g++
-RUN cargo install risc0-r0vm
+RUN cargo install --version 2.0.0 risc0-r0vm
 
 FROM alpine:latest
 COPY --from=builder /usr/local/cargo/bin/r0vm /usr/local/bin/r0vm
