--- a/crates/client-sdk/Cargo.toml
+++ b/crates/client-sdk/Cargo.toml
@@ -23,8 +23,6 @@ risc0-zkvm = { version = "2.0.0", default-features = false, optional = true }
 sp1-sdk = { version = "4.1.3", default-features = false, optional = true }
 bincode = { version = "1.3.3", optional = true }
 
-# Rest feature
-reqwest = { version = "0.12", features = ["json"], optional = true }
 
 # Tcp feature
 tokio = { version = "1.42.0", features = ["full", "tracing"], optional = true }
@@ -35,7 +33,7 @@ utoipa = { version = "5.3.1", optional = true }
 utoipa-axum = { version = "0.2.0", optional = true }
 
 [features]
-rest = ["dep:reqwest"]
+rest = []
 indexer = ["dep:utoipa", "dep:axum", "dep:utoipa-axum", "dep:tokio"]
 risc0 = ["dep:risc0-zkvm", "dep:bonsai-runner"]
 sp1 = ["dep:sp1-sdk", "dep:bincode"]
