--- a/crates/hyle-net/Cargo.toml
+++ b/crates/hyle-net/Cargo.toml
@@ -22,6 +22,11 @@ futures = { version = "0.3.31" }
 
 bytes = { version = "1.10.0" }
 paste = { version = "1.0.15" }
+serde_json = "1.0.140"
+http-body-util = "0.1.3"
+hyper = "1.6.0"
+hyper-util = "0.1.10"
+serde = "1.0.219"
 
 [features]
 default = ["tokio"]
