--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,7 +80,7 @@ hyle-contract-sdk = { workspace = true, default-features = false, features = [
 ] }
 staking = { workspace = true, default-features = false, features = ["client"] }
 client-sdk = { workspace = true, features = ["rest", "indexer"] }
-hyle-net = { workspace = true, features = ["tokio"] }
+hyle-net = { workspace = true }
 hyle-model = { workspace = true, default-features = false, features = [
   "full",
   "sqlx",
@@ -185,7 +185,9 @@ risc0-zkvm = { version = "2.0.0", default-features = false, features = [
 signal-child = "1.0.6"
 
 [features]
-default = []
+default = ["turmoil"]
+
+turmoil = ["hyle-net/turmoil", "client-sdk/turmoil"]
 
 sp1 = ["hyle-verifiers/sp1"]
 
