--- a/crates/client-sdk/Cargo.toml
+++ b/crates/client-sdk/Cargo.toml
@@ -11,7 +11,7 @@ rust-version = { workspace = true }
 [dependencies]
 sdk = { workspace = true, default-features = false, features = ["full-model"] }
 bonsai-runner = { workspace = true, optional = true }
-hyle-net = { workspace = true, features = ["tokio"] }
+hyle-net = { workspace = true }
 
 anyhow = "1.0.96"
 borsh = "1.5.6"
@@ -33,6 +33,7 @@ utoipa = { version = "5.3.1", optional = true }
 utoipa-axum = { version = "0.2.0", optional = true }
 
 [features]
+turmoil = ["hyle-net/turmoil"]
 rest = []
 indexer = ["dep:utoipa", "dep:axum", "dep:utoipa-axum", "dep:tokio"]
 risc0 = ["dep:risc0-zkvm", "dep:bonsai-runner"]
