--- a/crates/hyle-net/Cargo.toml
+++ b/crates/hyle-net/Cargo.toml
@@ -16,18 +16,20 @@ borsh = "1.5.5"
 tracing = "0.1"
 
 # Tcp feature
-tokio = { version = "1.42.0", features = ["full", "tracing"], optional = true }
+tokio = { version = "1.42.0", features = ["full", "tracing"]}
 tokio-util = { version = "0.7.14", features = ["codec"] }
 futures = { version = "0.3.31" }
+
+turmoil = { version = "0.6.6", optional = true }
 
 bytes = { version = "1.10.0" }
 paste = { version = "1.0.15" }
 serde_json = "1.0.140"
 http-body-util = "0.1.3"
-hyper = "1.6.0"
+hyper = { version = "1.6.0", features = ["client", "http1"] }
 hyper-util = "0.1.10"
 serde = "1.0.219"
+axum = "0.8.3"
 
 [features]
-default = ["tokio"]
-tokio = ["dep:tokio"]
+turmoil = ["dep:turmoil"]
