--- a/Cargo.toml
+++ b/Cargo.toml
@@ -157,6 +157,7 @@ toml = "0.8.20"
 # We force zip version here as later version is not compatible with utoipa-swagger-ui
 zip = "=2.3.0"
 serde_with = "3.12.0"
+seq-macro = "0.3.6"
 [package.metadata.cargo-machete]
 ignored = ["zip"]
 
