hide password in postgres url, address comments

--- a/src/utils/conf_defaults.toml
+++ b/src/utils/conf_defaults.toml
@@ -20,7 +20,7 @@ run_tcp_server = true
 tcp_server_port = 1414
 
 # Indexer
-run_indexer = true
+run_indexer = false
 database_url = "postgres://postgres:postgres@localhost:5432/postgres"
 da_address = "127.0.0.1:4141"
 
