--- a/crates/hyle-verifiers/Cargo.toml
+++ b/crates/hyle-verifiers/Cargo.toml
@@ -13,6 +13,7 @@ hyle-model = { workspace = true }
 
 anyhow = "1.0.96"
 borsh = "1.5.6"
+serde_json = "1.0.140"
 rand = { version = "0.9" }
 risc0-zkvm = { version = "2.0.0", default-features = false, features = ["std"] }
 tracing = "0.1"
