--- a/crates/hyle-verifiers/Cargo.toml
+++ b/crates/hyle-verifiers/Cargo.toml
@@ -11,9 +11,9 @@ rust-version = { workspace = true }
 [dependencies]
 hyle-model = { workspace = true }
 
+serde_json = { version = "1.0.140", optional = true }
 anyhow = "1.0.96"
 borsh = "1.5.6"
-serde_json = "1.0.140"
 rand = { version = "0.9" }
 risc0-zkvm = { version = "2.0.0", default-features = false, features = ["std"] }
 tracing = "0.1"
@@ -30,4 +30,4 @@ test-log = { version = "0.2.17", features = [
 
 [features]
 default = []
-sp1 = ["dep:sp1-sdk", "dep:bincode"]
+sp1 = ["dep:sp1-sdk", "dep:bincode", "serde_json"]
