--- a/crates/hyle-model/Cargo.toml
+++ b/crates/hyle-model/Cargo.toml
@@ -17,13 +17,15 @@ readonly = "0.2.12"
 sha3 = { version = "0.10.8", optional = true }
 blst = { version = "0.3.14", optional = true }
 strum_macros = { version = "0.27.1", optional = true }
-derive_more = { version = "2.0.1", features = ["display"]}
+derive_more = { version = "2.0.1", features = ["display"] }
 base64 = { version = "0.22.1", optional = true }
 anyhow = { version = "1.0.98", optional = true }
 sqlx = { version = "0.8.4", features = ["postgres"], optional = true }
 serde_with = { version = "3.12.0", features = ["hex"], optional = true }
 serde_json = { version = "1", optional = true }
 utoipa = { version = "5.3.1", optional = true }
+sha2 = { version = "=0.10.8", optional = true }                          # precompile patched at workspace root
+secp256k1 = { version = "0.30.0", optional = true }
 strum = "0.27.1"
 
 [features]
@@ -38,5 +40,7 @@ full = [
   "dep:serde_with",
   "dep:anyhow",
   "dep:utoipa",
+  "dep:secp256k1",
+  "dep:sha2",
 ]
 sqlx = ["dep:sqlx"]
