--- a/src/utils/conf_defaults.toml
+++ b/src/utils/conf_defaults.toml
@@ -38,6 +38,8 @@ ping_interval = 10
 [consensus]
 # Time between blocks (will change in the future)
 slot_duration = 1000
+# Whether to check timestamp consistency of produced blocks
+timestamp_checks = "Full"
 # Whether to run the single-node or full consensus
 solo = true
 
