--- a/crates/hyle-verifiers/Cargo.toml
+++ b/crates/hyle-verifiers/Cargo.toml
@@ -10,6 +10,7 @@ rust-version = { workspace = true }
 
 [dependencies]
 hyle-model = { workspace = true }
+hyle-crypto = { workspace = true }
 
 serde_json = { version = "1.0.140", optional = true }
 anyhow = "1.0.96"
@@ -18,6 +19,8 @@ rand = { version = "0.9" }
 risc0-zkvm = { version = "2.0.0", default-features = false, features = ["std"] }
 tracing = "0.1"
 hex = "0.4.3"
+sha3 = { version = "0.10.8" }
+secp256k1 = { version = "0.30.0" }
 
 sp1-sdk = { version = "4.1.3", default-features = false, optional = true }
 bincode = { version = "1.3.3", optional = true }
