✨ P2P Module into p2p server

--- a/crates/hyle-net/Cargo.toml
+++ b/crates/hyle-net/Cargo.toml
@@ -10,13 +10,14 @@ rust-version = { workspace = true }
 
 [dependencies]
 sdk = { workspace = true, default-features = false, features = ["full-model"] }
+hyle-crypto = { workspace = true }
 
 anyhow = "1.0.96"
 borsh = "1.5.5"
 tracing = "0.1"
 
 # Tcp feature
-tokio = { version = "1.42.0", features = ["full", "tracing"]}
+tokio = { version = "1.42.0", features = ["full", "tracing"] }
 tokio-util = { version = "0.7.14", features = ["codec"] }
 futures = { version = "0.3.31" }
 
@@ -30,6 +31,12 @@ hyper = { version = "1.6.0", features = ["client", "http1"] }
 hyper-util = "0.1.10"
 serde = "1.0.219"
 axum = "0.8.3"
+
+[dev-dependencies]
+test-log = { version = "0.2.17", features = [
+    "color",
+    "trace",
+], default-features = false }
 
 [features]
 turmoil = ["dep:turmoil"]
