--- a/crates/hyle-crypto/Cargo.toml
+++ b/crates/hyle-crypto/Cargo.toml
@@ -15,7 +15,6 @@ blst = { version = "0.3.14" }
 anyhow = "1.0.96"
 borsh = "1.5.6"
 rand = { version = "0.9" }
-tracing = "0.1"
 hex = "0.4.3"
 
 keyring = { version = "3", features = [
@@ -23,9 +22,10 @@ keyring = { version = "3", features = [
   "windows-native",
   "sync-secret-service",
 ], optional = true }
+whoami = { version = "1.5.2", optional = true }
 
 [features]
 default = []
 
 # Disable dependency keyring by default, as it requires libdbus
-keyring = ["dep:keyring"]
+keyring = ["dep:keyring", "dep:whoami"]
