--- a/crates/hyle-net/Cargo.toml
+++ b/crates/hyle-net/Cargo.toml
@@ -33,10 +33,12 @@ serde = "1.0.219"
 axum = "0.8.3"
 
 [dev-dependencies]
+rand = { version = "0.8.5", features = ["std"] }
 test-log = { version = "0.2.17", features = [
     "color",
     "trace",
 ], default-features = false }
 
 [features]
+default = ["turmoil"]
 turmoil = ["dep:turmoil"]
