--- a/Cargo.toml
+++ b/Cargo.toml
@@ -187,7 +187,7 @@ risc0-zkvm = { version = "2.0.0", default-features = false, features = [
 signal-child = "1.0.6"
 
 [features]
-default = []
+default = ["turmoil"]
 
 turmoil = ["hyle-net/turmoil", "client-sdk/turmoil"]
 
