--- a/crates/hyle-net/Cargo.toml
+++ b/crates/hyle-net/Cargo.toml
@@ -34,6 +34,7 @@ axum = "0.8.3"
 
 [dev-dependencies]
 rand = { version = "0.8.5", features = ["std"] }
+seq-macro = "0.3.6"
 test-log = { version = "0.2.17", features = [
     "color",
     "trace",
