remove hyle-net default turmoil

--- a/crates/hyle-net/Cargo.toml
+++ b/crates/hyle-net/Cargo.toml
@@ -41,5 +41,5 @@ test-log = { version = "0.2.17", features = [
 ], default-features = false }
 
 [features]
-default = ["turmoil"]
+# default = ["turmoil"]
 turmoil = ["dep:turmoil"]
