--- a/crates/contracts/hydentity/Cargo.toml
+++ b/crates/contracts/hydentity/Cargo.toml
@@ -32,7 +32,10 @@ hex = "0.4.3"
 risc0-zkvm = { version = "2.0.0", default-features = false, optional = true, features = [
   'std',
 ] }
-client-sdk = { workspace = true, features = ["risc0"], optional = true }
+client-sdk = { workspace = true, features = [
+  "risc0",
+  "indexer",
+], optional = true }
 sha2 = "=0.10.8" # precompile patched at workspace root
 
 [dev-dependencies]
