--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,30 +1,31 @@
 name: Docker image
 
-on: 
+on:
   push:
     branches:
-      - 'main'
-      - 'releases/**'
+      - "main"
+      - "releases/**"
     tags:
-      - '*'
+      - "*"
+  workflow_dispatch: {}
 
 env:
-  AR_REPO_LOCATION: 'europe-west3-docker.pkg.dev'
+  AR_REPO_LOCATION: "europe-west3-docker.pkg.dev"
 
 jobs:
   build_and_push:
     if: ${{ github.actor != 'dependabot[bot]' }}
     permissions:
-      contents: 'read'
-      id-token: 'write'
-      packages: 'write'
+      contents: "read"
+      id-token: "write"
+      packages: "write"
 
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         mode:
-          - file: Dockerfile 
+          - file: Dockerfile
             name: hyle
             push_ghcr: true
             images: |
@@ -47,27 +48,26 @@ jobs:
         with:
           images: ${{ matrix.mode.images }}
 
-
-# Will produces tags given this table : 
-# 
-# | Event               | Ref                           | Docker Tags                |
-# |---------------------|-------------------------------|----------------------------|
-# | `pull_request`      | `refs/pull/2/merge`           | `pr-2`                     |
-# | `push`              | `refs/heads/master`           | `master`                   |
-# | `push`              | `refs/heads/releases/v1`      | `releases-v1`              |
-# | `push tag`          | `refs/tags/v1.2.3`            | `v1.2.3`, `latest`         |
-# | `push tag`          | `refs/tags/v2.0.8-beta.67`    | `v2.0.8-beta.67`, `latest` |
-# | `workflow_dispatch` | `refs/heads/master`           | `master`                   |
+      # Will produces tags given this table :
+      #
+      # | Event               | Ref                           | Docker Tags                |
+      # |---------------------|-------------------------------|----------------------------|
+      # | `pull_request`      | `refs/pull/2/merge`           | `pr-2`                     |
+      # | `push`              | `refs/heads/master`           | `master`                   |
+      # | `push`              | `refs/heads/releases/v1`      | `releases-v1`              |
+      # | `push tag`          | `refs/tags/v1.2.3`            | `v1.2.3`, `latest`         |
+      # | `push tag`          | `refs/tags/v2.0.8-beta.67`    | `v2.0.8-beta.67`, `latest` |
+      # | `workflow_dispatch` | `refs/heads/master`           | `master`                   |
 
       - name: Docker Auth
         id: docker-auth
-        uses: 'docker/login-action@v3'
+        uses: "docker/login-action@v3"
         with:
           username: _json_key
           password: ${{ secrets.GOOGLE_CREDENTIALS }}
           registry: ${{ env.AR_REPO_LOCATION }}
 
-      - name: 'Login to GitHub Container Registry'
+      - name: "Login to GitHub Container Registry"
         uses: docker/login-action@v1
         if: ${{ matrix.mode.push_ghcr }}
         with:
@@ -79,10 +79,9 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          file: ${{ matrix.mode.file }} 
+          file: ${{ matrix.mode.file }}
           context: .
           build-args: |
             DEP_IMAGE=europe-west3-docker.pkg.dev/hyle-413414/hyle-docker/hyle-dependencies:main
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
