--- a/tools/observability/grafana-datasources/prom.yml
+++ b/tools/observability/grafana-datasources/prom.yml
@@ -4,6 +4,6 @@ datasources:
   - name: Prometheus
     type: prometheus
     access: proxy
-    url: http://localhost:9090  # URL de Prometheus
+    url: http://prometheus:9090
     jsonData:
       httpMethod: POST
