--- a/tools/observability/prometheus.yml
+++ b/tools/observability/prometheus.yml
@@ -1,10 +1,14 @@
 global:
-  scrape_interval: 15s  # Intervalle de scrape par défaut
+  scrape_interval: 15s # Intervalle de scrape par défaut
 
 scrape_configs:
-  - job_name: 'local-metrics'
+  - job_name: "local-metrics"
     metrics_path: "/v1/metrics"
-    scrape_interval: 1s  # Intervalle spécifique pour ce job
+    scrape_interval: 1s # Intervalle spécifique pour ce job
     static_configs:
-      - targets: ["localhost:4001", "localhost:4002", "localhost:4003"]
-
+      - targets: ["host.docker.internal:4321"]
+        labels:
+          node: "hyle1"
+      - targets: ["host.docker.internal:4322"]
+        labels:
+          node: "hyle2"
