--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,6 +77,7 @@ unwrap_used = "warn"
 expect_used = "warn"
 unused_result_ok = "warn"
 indexing_slicing = "warn"
+undocumented_unsafe_blocks = "warn"
 
 [dependencies]
 # Public dependencies
